Fix layout issues with some components on mobile

--- a/frontend/src/scss/components/_hero.scss
+++ b/frontend/src/scss/components/_hero.scss
@@ -48,8 +48,10 @@
 }
 
 .hero__product {
-  width: 40rem;
-  height: 20rem;
+  width: 80vw;
+  height: 40vw;
+  max-width: 40rem;
+  max-height: 20rem;
   margin-top: $space-huge-md;
   margin-left: auto;
   margin-right: auto;
